Revision history for Perl extension D64::Disk::Dir.

0.05  2023-05-12
    - add verbose mode of printing out disk directory content, which
      additionally includes file's track, sector, and loading address values

0.04  2018-11-25
    - remove hard-coded file names in tests and replace them with a File::Temp's
      "tmpnam" function call that returns the full name of a temporary file

0.03  2013-02-16
    - fixed failing unit-tests for Perl 5.6.2 by switching to Capture::Tiny
      to capture the contents written into a standard output and IO::Scalar
      to simulate the interface for writing data into an opened filehandle

0.02  2011-01-13
    - fixed a typo in the NAME section of POD for D64::Disk::Dir::Iterator

0.01  2011-01-09
    - initial version (supports reading D64/D71/D81 disk image directories,
      and accessing individual directory entries)