@@ -3,6 +3,8 @@ Revision history for Perl extension D64::Disk::Dir.
 0.05  2023-05-12
     - add verbose mode of printing out disk directory content, which
       additionally includes file's track, sector, and loading address values
+    - fixed an incomplete disk ID read from a disk directory (now getting all
+      five characters instead of only the first two)
 
 0.04  2018-11-25
     - remove hard-coded file names in tests and replace them with a File::Temp's
